[package]
name = "dynamic_vault"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dynamic_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
meteora-dlmm = { git = "https://github.com/metaplex-foundation/mpl-dlmm.git", rev = "main", features = ["no-entrypoint"] }
pyth-sdk-solana = "0.10.5"
